GNOME Bugzilla – Bug 671373
Printer calibration fails - cannot find .ti2 file
Last modified: 2012-05-31 17:38:49 UTC
I tried to calibrate my HP printer. But the process always failed with same error message: About missing .ti2 file. I straced the gnome-contorl-center and found out that gcm-calibrate creates a .ti1 file: 6533 execve("/usr/bin/gcm-calibrate", ["/usr/bin/gcm-calibrate", "--device", "cups-HP-Photosmart-Prem-C310", "--parent-window", "31457291"], [/* 49 vars */] <unfinished ...> 6533 open("/home/mtiihone/.config/gnome-color-manager/calibration/GCM - Hewlett Packard - HP Photosmart Prem c310 Series - hp__net_Photosmart_Prem_C310_series_zc_printer (2012-03-04) [15-36-27] - 15-36-27/GCM - Hewlett Packard - HP Photosmart Prem c310 Series - hp__net_Photosmart_Prem_C310_series_zc_printer (2012-03-04) [15-36-27].ti1", O_WRONLY|O_CREAT|O_EXCL, 0666 <unfinished ...> Whereas chartread tries to read .ti2 file: 6644 execve("/usr/bin/chartread", ["/usr/bin/chartread", "-v", "GCM - Hewlett Packard - HP Photo"...], [/* 50 vars */] <unfinished ...> 6644 open("GCM - Hewlett Packard - HP Photosmart Prem c310 Series - hp__net_Photosmart_Prem_C310_series_zc_printer (2012-03-04) [15-36-27].ti2", O_RDONLY) = -1 ENOENT (No such file or directory) bug
I'm using Fedora 17: agryllcms 1.3.5-7 gnome-color-manager 3.3.5-1 colord 0.1.17-1 And my calibrator is colormunki from X-Rite
I think this bug is hitting me too CGATS file read error: Unable to open file 'GCM - Hewlett Package - HP Photosmart c6200 Series - socket___192_168_9_2_9100 (2012-03-17 [18-02-00].ti2' for reading. Assuming this might be a special character escaping issue, what might only happen with certain types of printers, it's nice to know it's reproducible with CUPS-PDF too: CGATS file read error: Unable to open file 'GCM - Generic - Generic CUPS-PDF Printer - cups-pdf (2012-03-17 [18-04-38].ti2' for reading. I ran into this bug on Ubuntu Precise (12.04) (using my gcm-colorhug ppa): Argyll 1.3.5 GNOME Color Manager 3.3.91 colord 0.1.16
commit 7ccdbc0da05b5ba4722e6ef46084eafafed450e8 Author: Richard Hughes <richard@hughsie.com> Date: Tue May 29 16:58:25 2012 +0100 Ensure the print profile mode is set in the calibration dialog Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=671373 Can one of you guys please verify this fixes the issue on git master, and if it works I'll backport into the stable branches. Thanks.
Created attachment 215288 [details] Stacktrace of crash when calibrating latest git As requested, I tried to reproduce the problem with git version. I built gnome-color-manager from git version 8cb9ff39fc70b189296ef86ddf00e16fd6e21a59 It now crashes in cairo The attached stack trace has been run with the following related packages: cairo-1.12.2-1.fc18 colord-0.1.21-1.fc17 argyllcms-1.4.0-1.fc17
Created attachment 215325 [details] [review] test patch Can you try this test patch please. Thanks.
Created attachment 215352 [details] Stacktrace of crash when calibrating latest git + test patch Still crashes at the same place when selecting local printer option. Just as background the git version (with or without your test patch) does show the print dialog, but immediately after clicking print or preview the gcm crashes. I now also tried first time the generate for remote printer option and that worked nicely - as far as I understand. At least the opened directory contains: .ti1, .ti2, 01.jpg, 01.tif, 02.jpg, 02.tif. But gcm shows no instructions on what to do with them.