Ensure the print profile mode is set in the calibration dialog

Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=671373